WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282025
REGRESSION: "tabs" field missing from windows.create returned windows.Window
https://bugs.webkit.org/show_bug.cgi?id=282025
Summary
REGRESSION: "tabs" field missing from windows.create returned windows.Window
medias.medial.06
Reported
2024-10-23 19:53:15 PDT
The `tabs` field missing from windows.create returned windows.Window, where the `tabs` field was supposed to be available according to MDN:
https://developer.mozilla.org/en-US/docs/Mozilla/Add-ons/WebExtensions/API/windows/create#return_value
>This Window object will always have its tabs property set, unlike the Window objects returned from windows.get() and similar APIs, which only contain tabs if the populate option is passed.
and it used to be available prior to Safari 18. # Reproduce manifest.json ```json { "manifest_version": 2, "name": "example", "version": "0.0.0", "permissions": ["<all_urls>"], "background": { "page": "background.html", "persistent": true } } ``` background.html ```html <script type="module" crossorigin src="./background.js"></script> ``` background.js ```js console.log(await browser.windows.create({ url: '
https://example.com
', type: 'popup' })) ``` # Expected Result: Safari 17.6 ```json { "alwaysOnTop": false, "focused": true, "height": 809, "id": 9, "incognito": false, "left": 184, "state": "normal", "tabs": [ { "active": true, "audible": false, "height": 809, "highlighted": true, "id": 34, "incognito": false, "index": 0, "isArticle": false, "isInReaderMode": false, "mutedInfo": { "muted": false }, "pendingUrl": "
https://example.com/
", "pinned": false, "status": "loading", "url": "
https://example.com/
", "width": 1010, "windowId": 9 } ], "top": 25, "type": "popup", "width": 1010 } ``` # Actual Result: Safari 18.0.1 ```json { "alwaysOnTop": false, "focused": true, "height": 1415, "id": 320718, "incognito": false, "left": 244, "state": "normal", "top": 25, "type": "popup", "width": 2316 } ```
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-10-23 19:53:24 PDT
<
rdar://problem/138529797
>
Timothy Hatcher
Comment 2
2025-01-14 19:57:37 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39047
EWS
Comment 3
2025-01-15 10:21:51 PST
Committed
288949@main
(8e0fc5af568b): <
https://commits.webkit.org/288949@main
> Reviewed commits have been landed. Closing PR #39047 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug