REGRESSION: "tabs" field missing from windows.create returned windows.Window. https://webkit.org/b/282025 rdar://problem/138529797

Reviewed by Brian Weinstein.

Make sure to pass PopulateTabs::Yes when returning the new window parameters.

Added tests and test harness support for creating windows with URLs.

* Source/WebKit/UIProcess/Extensions/Cocoa/API/WebExtensionContextAPIRuntimeCocoa.mm:
(WebKit::WebExtensionContext::runtimeOpenOptionsPage): Drive-by error string fix.
* Source/WebKit/UIProcess/Extensions/Cocoa/API/WebExtensionContextAPITabsCocoa.mm:
(WebKit::WebExtensionContext::tabsCreate): Drive-by error string fix.
* Source/WebKit/UIProcess/Extensions/Cocoa/API/WebExtensionContextAPIWindowsCocoa.mm:
(WebKit::WebExtensionContext::windowsCreate): Pass PopulateTabs::Yes
* Source/WebKit/UIProcess/Extensions/Cocoa/WebExtensionTabCocoa.mm:
(WebKit::WebExtensionTab::duplicate): Drive-by error string fix.
* Tools/TestWebKitAPI/Tests/WebKitCocoa/WKWebExtensionAPIWindows.mm:
(TestWebKitAPI::TEST(WKWebExtensionAPIWindows, Create)): Test window.tabs result.
(TestWebKitAPI::TEST(WKWebExtensionAPIWindows, CreateWithRelativeURL)): Ditto.
(TestWebKitAPI::TEST(WKWebExtensionAPIWindows, CreateWithRelativeURLs)): Ditto.
(TestWebKitAPI::TEST(WKWebExtensionAPIWindows, CreateIncognitoWithPrivateAccess)): Ditto.
* Tools/TestWebKitAPI/cocoa/WebExtensionUtilities.mm:
(-[TestWebExtensionManager initForExtension:extensionControllerConfiguration:]): Support tabURLs.

Canonical link: https://commits.webkit.org/288949@main